httpserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: httpserver
